# supcon-autoencoder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: Makefile  README.md  __init__.py
examples/fashion_mnist/: __init__.py  augmentation.py  dataset.py  embedding_plot.py  main.py
examples/gene_expression/: Makefile  __init__.py  augmentation.py  config.py  config.yaml  config.yaml.example  dataset.py  embedding_plot.py  label_encoding.json.example  loss_plot.py  main.py  model.py
examples/gene_expression/tests/: __init__.py  test_dataset.py
examples/utils/: __init__.py  embedding_plot.py
src/supcon_autoencoder/: __init__.py  data.py  loss.py  training.py
src/supcon_autoencoder/core/: __init__.py  data.py  loss.py  model.py  trackers.py  training.py
tests/: __init__.py
tests/unit/: __init__.py  test_loss.py  test_model.py
