[project]
name = "supcon-autoencoder"
version = "2.0.0"
description = "Supervised Contrastive Learning (SupCon) in Autoencoder"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Timur Çakmakoğlu", email = "timurcakmakoglu@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mlflow>=3.9.0",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
extra = [
    "dec-torch",
    "polars>=1.37.1",
    "scikit-learn>=1.8.0",
    "torchvision>=0.24.1",
    "umap-learn>=0.5.11",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "ANN201",  # require return type annotations
    "S101",  # prevent usage of assert
    "SLF001",  # private member accessed (testing internal methods)
    "PLR2004",  # magic value used in comparison (acceptable in tests)
]

[tool.uv.sources]
dec-torch = { git = "https://github.com/timurci/DEC-torch.git" }
